--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -1,9 +1,7 @@
-$body-bg:#0F3840;
+$body-bg:#c7d9dd;
 
 :root {
     --main-color: #0F3840;
 }
-
-
 
 @import "../../node_modules/bootstrap/scss/bootstrap.scss"
