--- a/src/scss/sections/_form.scss
+++ b/src/scss/sections/_form.scss
@@ -3,4 +3,9 @@
 .form-size {
     max-width: 576px;
     margin: 0 auto;
+    padding: 15px 15px 55px 15px;
+}
+
+.submit-button {
+    float: right;
 }
