--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -1,4 +1,11 @@
-$body-bg:#c7d9dd;
+$body-bg: #ffffff;
+
+$primary: #1d3557;
+$secondary: #334155;
+$danger: #e63946;
+$success: #457b9d;
+$info: #a8dadc;
+$light: #f1faee;
 
 :root {
     --main-color: #0F3840;
