--- a/src/scss/sections/_main.scss
+++ b/src/scss/sections/_main.scss
@@ -3,3 +3,12 @@
 .main-color {
     background: var(--main-color);
 }
+
+.body-bg {
+    background-color: #457b9d !important;
+
+}
+
+#main-body {
+    height: 100vh !important;
+}
