--- a/src/scss/sections/_form.scss
+++ b/src/scss/sections/_form.scss
@@ -1,11 +1,15 @@
 @use "../custom";
 
 .form-size {
-    max-width: 576px;
+    max-width: 400px;
     margin: 0 auto;
-    padding: 15px 15px 55px 15px;
+    padding: 15px;
 }
 
 .submit-button {
     float: right;
+}
+
+#form-body {
+    padding-bottom: 70px;
 }
