--- a/src/scss/sections/_navbar.scss
+++ b/src/scss/sections/_navbar.scss
@@ -1,6 +1,21 @@
 @use "../custom";
 
-.navbar-styling{
-    background-color: var(--bs-light) ;
+@media (max-width: 300px) {
+    .home-btn {
+        font-size: xx-small !important;
+        padding: 2px;
+    }
+    .nav-title{
+        font-size: small !important;
+    }
+}
+
+.navbar-styling {
+    background-color: var(--bs-light);
     // box-shadow: var(--bs-shadow);
+}
+
+.home-btn {
+    font-size: small;
+    padding: 5px;
 }
