--- a/src/scss/sections/_history.scss
+++ b/src/scss/sections/_history.scss
@@ -3,7 +3,7 @@
 .history-size {
     max-width: 768px;
     margin: 15px auto;
-    padding: 0 15px;
+    padding: 0px 15px 45px 15px;
 }
 
 .acc-style {
