--- a/src/scss/sections/_navbar.scss
+++ b/src/scss/sections/_navbar.scss
@@ -13,11 +13,10 @@
 
 .navbar-styling {
     background-color: var(--bs-light);
-    // box-shadow: var(--bs-shadow);
+    box-shadow: 0 2px 35px rgba(0, 0, 0);
 }
 
 .home-btn {
     font-size: medium;
     padding: 5px;
-
 }
