--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -3,7 +3,7 @@ $body-bg: #ffffff;
 $primary: #1d3557;
 $secondary: #334155;
 $danger: #e63946;
-$success: #457b9d;
+$success: #237263;
 $info: #a8dadc;
 $light: #f1faee;
 
