--- a/src/scss/sections/_footer.scss
+++ b/src/scss/sections/_footer.scss
@@ -2,18 +2,24 @@
 
 @media (max-width: 768px) {
     .footer-text {
-        font-size: 0.75rem;
+        font-size: 0.7rem;
         /* Smaller font size for mobile */
+    }
+
+    #my-footer {
+        height: auto !important;
+        /* Smaller logo size for mobile */
     }
 }
 
 #my-footer {
     width: 100%;
+    height: 72px;
     background: var(--bs-light);
     /* Use Bootstrap's light theme color */
     position: fixed;
     bottom: 0;
-    padding: 10px 0;
+    padding: 5px 0;
     /* Increased padding for better spacing */
     display: flex;
     justify-content: center;
@@ -34,7 +40,7 @@
     /* Center-align text for better readability */
     margin: 0 10px;
     /* Remove unnecessary margin */
-    font-size: 0.875rem;
+    font-size: 0.8rem;
     /* Use rem units for better scalability */
     color: #333;
     /* Darker text color for better contrast */
