--- a/src/assets/scss/styles.css
+++ b/src/assets/scss/styles.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 :root {
-  --main-color: #0F3840;
+  --main-color: #0f3840;
 }
 
 /*!
@@ -38,7 +38,7 @@
   --bs-success: #237263;
   --bs-info: #a8dadc;
   --bs-warning: #ffc107;
-  --bs-danger: #e63946;
+  --bs-danger: #d43240;
   --bs-light: #f1faee;
   --bs-dark: #212529;
   --bs-primary-rgb: 29, 53, 87;
@@ -46,7 +46,7 @@
   --bs-success-rgb: 35, 114, 99;
   --bs-info-rgb: 168, 218, 220;
   --bs-warning-rgb: 255, 193, 7;
-  --bs-danger-rgb: 230, 57, 70;
+  --bs-danger-rgb: 212, 50, 64;
   --bs-light-rgb: 241, 250, 238;
   --bs-dark-rgb: 33, 37, 41;
   --bs-primary-text-emphasis: #0c1523;
@@ -54,7 +54,7 @@
   --bs-success-text-emphasis: #0e2e28;
   --bs-info-text-emphasis: #435758;
   --bs-warning-text-emphasis: #664d03;
-  --bs-danger-text-emphasis: #5c171c;
+  --bs-danger-text-emphasis: #55141a;
   --bs-light-text-emphasis: #495057;
   --bs-dark-text-emphasis: #495057;
   --bs-primary-bg-subtle: #d2d7dd;
@@ -62,7 +62,7 @@
   --bs-success-bg-subtle: #d3e3e0;
   --bs-info-bg-subtle: #eef8f8;
   --bs-warning-bg-subtle: #fff3cd;
-  --bs-danger-bg-subtle: #fad7da;
+  --bs-danger-bg-subtle: #f6d6d9;
   --bs-light-bg-subtle: #fcfcfd;
   --bs-dark-bg-subtle: #ced4da;
   --bs-primary-border-subtle: #a5aebc;
@@ -70,7 +70,7 @@
   --bs-success-border-subtle: #a7c7c1;
   --bs-info-border-subtle: #dcf0f1;
   --bs-warning-border-subtle: #ffe69c;
-  --bs-danger-border-subtle: #f5b0b5;
+  --bs-danger-border-subtle: #eeadb3;
   --bs-light-border-subtle: #e9ecef;
   --bs-dark-border-subtle: #adb5bd;
   --bs-white-rgb: 255, 255, 255;
@@ -124,8 +124,8 @@
   --bs-focus-ring-color: rgba(29, 53, 87, 0.25);
   --bs-form-valid-color: #237263;
   --bs-form-valid-border-color: #237263;
-  --bs-form-invalid-color: #e63946;
-  --bs-form-invalid-border-color: #e63946;
+  --bs-form-invalid-color: #d43240;
+  --bs-form-invalid-border-color: #d43240;
 }
 
 [data-bs-theme=dark] {
@@ -149,7 +149,7 @@
   --bs-success-text-emphasis: #7baaa1;
   --bs-info-text-emphasis: #cbe9ea;
   --bs-warning-text-emphasis: #ffda6a;
-  --bs-danger-text-emphasis: #f08890;
+  --bs-danger-text-emphasis: #e5848c;
   --bs-light-text-emphasis: #f8f9fa;
   --bs-dark-text-emphasis: #dee2e6;
   --bs-primary-bg-subtle: #060b11;
@@ -157,7 +157,7 @@
   --bs-success-bg-subtle: #071714;
   --bs-info-bg-subtle: #222c2c;
   --bs-warning-bg-subtle: #332701;
-  --bs-danger-bg-subtle: #2e0b0e;
+  --bs-danger-bg-subtle: #2a0a0d;
   --bs-light-bg-subtle: #343a40;
   --bs-dark-bg-subtle: #1a1d20;
   --bs-primary-border-subtle: #112034;
@@ -165,7 +165,7 @@
   --bs-success-border-subtle: #15443b;
   --bs-info-border-subtle: #658384;
   --bs-warning-border-subtle: #997404;
-  --bs-danger-border-subtle: #8a222a;
+  --bs-danger-border-subtle: #7f1e26;
   --bs-light-border-subtle: #495057;
   --bs-dark-border-subtle: #343a40;
   --bs-heading-color: inherit;
@@ -2000,13 +2000,13 @@ progress {
 
 .table-danger {
   --bs-table-color: #000;
-  --bs-table-bg: #fad7da;
-  --bs-table-border-color: #e1c2c4;
-  --bs-table-striped-bg: #eecccf;
+  --bs-table-bg: #f6d6d9;
+  --bs-table-border-color: #ddc1c3;
+  --bs-table-striped-bg: #eacbce;
   --bs-table-striped-color: #000;
-  --bs-table-active-bg: #e1c2c4;
+  --bs-table-active-bg: #ddc1c3;
   --bs-table-active-color: #000;
-  --bs-table-hover-bg: #e7c7ca;
+  --bs-table-hover-bg: #e4c6c9;
   --bs-table-hover-color: #000;
   color: var(--bs-table-color);
   border-color: var(--bs-table-border-color);
@@ -2826,7 +2826,7 @@ textarea.form-control-lg {
 .was-validated .form-control:invalid, .form-control.is-invalid {
   border-color: var(--bs-form-invalid-border-color);
   padding-right: calc(1.5em + 0.75rem);
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 12 12' width='12' height='12' fill='none' stroke='%23e63946'%3e%3ccircle cx='6' cy='6' r='4.5'/%3e%3cpath stroke-linejoin='round' d='M5.8 3.6h.4L6 6.5z'/%3e%3ccircle cx='6' cy='8.2' r='.6' fill='%23e63946' stroke='none'/%3e%3c/svg%3e");
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 12 12' width='12' height='12' fill='none' stroke='%23d43240'%3e%3ccircle cx='6' cy='6' r='4.5'/%3e%3cpath stroke-linejoin='round' d='M5.8 3.6h.4L6 6.5z'/%3e%3ccircle cx='6' cy='8.2' r='.6' fill='%23d43240' stroke='none'/%3e%3c/svg%3e");
   background-repeat: no-repeat;
   background-position: right calc(0.375em + 0.1875rem) center;
   background-size: calc(0.75em + 0.375rem) calc(0.75em + 0.375rem);
@@ -2845,7 +2845,7 @@ textarea.form-control-lg {
   border-color: var(--bs-form-invalid-border-color);
 }
 .was-validated .form-select:invalid:not([multiple]):not([size]), .was-validated .form-select:invalid:not([multiple])[size="1"], .form-select.is-invalid:not([multiple]):not([size]), .form-select.is-invalid:not([multiple])[size="1"] {
-  --bs-form-select-bg-icon: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 12 12' width='12' height='12' fill='none' stroke='%23e63946'%3e%3ccircle cx='6' cy='6' r='4.5'/%3e%3cpath stroke-linejoin='round' d='M5.8 3.6h.4L6 6.5z'/%3e%3ccircle cx='6' cy='8.2' r='.6' fill='%23e63946' stroke='none'/%3e%3c/svg%3e");
+  --bs-form-select-bg-icon: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 12 12' width='12' height='12' fill='none' stroke='%23d43240'%3e%3ccircle cx='6' cy='6' r='4.5'/%3e%3cpath stroke-linejoin='round' d='M5.8 3.6h.4L6 6.5z'/%3e%3ccircle cx='6' cy='8.2' r='.6' fill='%23d43240' stroke='none'/%3e%3c/svg%3e");
   padding-right: 4.125rem;
   background-position: right 0.75rem center, center right 2.25rem;
   background-size: 16px 12px, calc(0.75em + 0.375rem) calc(0.75em + 0.375rem);
@@ -3046,20 +3046,20 @@ textarea.form-control-lg {
 }
 
 .btn-danger {
-  --bs-btn-color: #000;
-  --bs-btn-bg: #e63946;
-  --bs-btn-border-color: #e63946;
-  --bs-btn-hover-color: #000;
-  --bs-btn-hover-bg: #ea5762;
-  --bs-btn-hover-border-color: #e94d59;
-  --bs-btn-focus-shadow-rgb: 196, 48, 60;
-  --bs-btn-active-color: #000;
-  --bs-btn-active-bg: #eb616b;
-  --bs-btn-active-border-color: #e94d59;
+  --bs-btn-color: #fff;
+  --bs-btn-bg: #d43240;
+  --bs-btn-border-color: #d43240;
+  --bs-btn-hover-color: #fff;
+  --bs-btn-hover-bg: #b42b36;
+  --bs-btn-hover-border-color: #aa2833;
+  --bs-btn-focus-shadow-rgb: 218, 81, 93;
+  --bs-btn-active-color: #fff;
+  --bs-btn-active-bg: #aa2833;
+  --bs-btn-active-border-color: #9f2630;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-  --bs-btn-disabled-color: #000;
-  --bs-btn-disabled-bg: #e63946;
-  --bs-btn-disabled-border-color: #e63946;
+  --bs-btn-disabled-color: #fff;
+  --bs-btn-disabled-bg: #d43240;
+  --bs-btn-disabled-border-color: #d43240;
 }
 
 .btn-light {
@@ -3182,19 +3182,19 @@ textarea.form-control-lg {
 }
 
 .btn-outline-danger {
-  --bs-btn-color: #e63946;
-  --bs-btn-border-color: #e63946;
-  --bs-btn-hover-color: #000;
-  --bs-btn-hover-bg: #e63946;
-  --bs-btn-hover-border-color: #e63946;
-  --bs-btn-focus-shadow-rgb: 230, 57, 70;
-  --bs-btn-active-color: #000;
-  --bs-btn-active-bg: #e63946;
-  --bs-btn-active-border-color: #e63946;
+  --bs-btn-color: #d43240;
+  --bs-btn-border-color: #d43240;
+  --bs-btn-hover-color: #fff;
+  --bs-btn-hover-bg: #d43240;
+  --bs-btn-hover-border-color: #d43240;
+  --bs-btn-focus-shadow-rgb: 212, 50, 64;
+  --bs-btn-active-color: #fff;
+  --bs-btn-active-bg: #d43240;
+  --bs-btn-active-border-color: #d43240;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-  --bs-btn-disabled-color: #e63946;
+  --bs-btn-disabled-color: #d43240;
   --bs-btn-disabled-bg: transparent;
-  --bs-btn-disabled-border-color: #e63946;
+  --bs-btn-disabled-border-color: #d43240;
   --bs-gradient: none;
 }
 
@@ -6790,8 +6790,8 @@ textarea.form-control-lg {
 }
 
 .text-bg-danger {
-  color: #000 !important;
-  background-color: RGBA(230, 57, 70, var(--bs-bg-opacity, 1)) !important;
+  color: #fff !important;
+  background-color: RGBA(212, 50, 64, var(--bs-bg-opacity, 1)) !important;
 }
 
 .text-bg-light {
@@ -6854,8 +6854,8 @@ textarea.form-control-lg {
   text-decoration-color: RGBA(var(--bs-danger-rgb), var(--bs-link-underline-opacity, 1)) !important;
 }
 .link-danger:hover, .link-danger:focus {
-  color: RGBA(235, 97, 107, var(--bs-link-opacity, 1)) !important;
-  text-decoration-color: RGBA(235, 97, 107, var(--bs-link-underline-opacity, 1)) !important;
+  color: RGBA(170, 40, 51, var(--bs-link-opacity, 1)) !important;
+  text-decoration-color: RGBA(170, 40, 51, var(--bs-link-underline-opacity, 1)) !important;
 }
 
 .link-light {
@@ -11867,7 +11867,7 @@ textarea.form-control-lg {
 }
 
 .body-bg {
-  background: linear-gradient(to top left, #212529, #358b9a, #454d55), radial-gradient(circle, #315d36, transparent);
+  background: linear-gradient(to top left, #212529, #133339, #191c1f), radial-gradient(circle, #315d36, transparent);
   background-blend-mode: overlay;
 }
 
@@ -11891,6 +11891,7 @@ textarea.form-control-lg {
 }
 
 #form-body {
+  min-height: 100% !important;
   padding-bottom: 70px;
 }
 
@@ -11949,7 +11950,7 @@ textarea.form-control-lg {
 
 @media (max-width: 768px) {
   .footer-text {
-    font-size: 0.7rem;
+    font-size: 0.7rem !important;
     /* Smaller font size for mobile */
   }
   #my-footer {
@@ -11970,7 +11971,7 @@ textarea.form-control-lg {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  box-shadow: 0 -2px 35px rgb(0, 0, 0);
+  box-shadow: 0 -2px 15px rgb(0, 0, 0);
   /* Add a subtle shadow for depth */
   z-index: 1000;
   /* Ensure the footer stays above other content */
