--- a/src/scss/sections/_form.scss
+++ b/src/scss/sections/_form.scss
@@ -1,15 +1,16 @@
 @use "../custom";
 
 .form-size {
-    max-width: 400px;
-    margin: 0 auto;
-    padding: 15px;
+  max-width: 400px;
+  margin: 0 auto;
+  padding: 15px;
 }
 
 .submit-button {
-    float: right;
+  float: right;
 }
 
 #form-body {
-    padding-bottom: 70px;
+  min-height: 100% !important;
+  padding-bottom: 70px;
 }
