--- a/src/scss/sections/_main.scss
+++ b/src/scss/sections/_main.scss
@@ -5,10 +5,23 @@
 }
 
 .body-bg {
-  background: linear-gradient(to top left, #212529, #133339, #191c1f),
-    radial-gradient(circle, #315d36, transparent);
-  background-blend-mode: overlay;
+  overflow: hidden;
+  
 }
+
+.body-bg::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+      background: url("/src/assets/Images/bg.jpg");
+  background-size: cover;
+  background-position: center;
+  filter: blur(12px);
+  z-index: -1;
+} 
 
 #main-body {
   min-height: 100vh !important;
