--- a/src/assets/scss/styles.css
+++ b/src/assets/scss/styles.css
@@ -11867,7 +11867,9 @@ textarea.form-control-lg {
 }
 
 .body-bg {
-  overflow: hidden;
+  position: relative;
+  min-height: 100vh;
+  width: 100%;
 }
 
 .body-bg::before {
