--- a/src/scss/sections/_main.scss
+++ b/src/scss/sections/_main.scss
@@ -5,8 +5,9 @@
 }
 
 .body-bg {
-  overflow: hidden;
-  
+  position: relative;
+  min-height: 100vh;
+  width: 100%;
 }
 
 .body-bg::before {
@@ -16,12 +17,12 @@
   left: 0;
   width: 100%;
   height: 100%;
-      background: url("/src/assets/Images/bg.jpg");
+  background: url("/src/assets/Images/bg.jpg");
   background-size: cover;
   background-position: center;
   filter: blur(12px);
   z-index: -1;
-} 
+}
 
 #main-body {
   min-height: 100vh !important;
