--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -4,7 +4,7 @@ $secondary: #334155;
 $danger: #d43240;
 $success: #237263;
 $info: #a8dadc;
-$light: #E4EFE7;
+$light: #fffde7;
 
 :root {
   --main-color: #0f3840;
