--- a/src/assets/scss/styles.css
+++ b/src/assets/scss/styles.css
@@ -78,7 +78,7 @@
   --bs-font-sans-serif: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", "Noto Sans", "Liberation Sans", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   --bs-font-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
   --bs-gradient: linear-gradient(180deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0));
-  --bs-body-font-family: "Space Grotesk", var(--bs-font-sans-serif);
+  --bs-body-font-family: var(--bs-font-sans-serif);
   --bs-body-font-size: 1rem;
   --bs-body-font-weight: 400;
   --bs-body-line-height: 1.5;
@@ -12028,6 +12028,10 @@ textarea.form-control-lg {
 .footer-text a:hover {
   text-decoration: underline;
   /* Add underline on hover for better UX */
+}
+
+.error-page {
+  min-height: 75vh !important;
 }
 
 /*# sourceMappingURL=styles.css.map */
