--- a/src/assets/scss/styles.css
+++ b/src/assets/scss/styles.css
@@ -39,7 +39,7 @@
   --bs-info: #a8dadc;
   --bs-warning: #ffc107;
   --bs-danger: #d43240;
-  --bs-light: #fffdef;
+  --bs-light: #ededed;
   --bs-dark: #212529;
   --bs-primary-rgb: 29, 53, 87;
   --bs-secondary-rgb: 51, 65, 85;
@@ -47,7 +47,7 @@
   --bs-info-rgb: 168, 218, 220;
   --bs-warning-rgb: 255, 193, 7;
   --bs-danger-rgb: 212, 50, 64;
-  --bs-light-rgb: 255, 253, 239;
+  --bs-light-rgb: 237, 237, 237;
   --bs-dark-rgb: 33, 37, 41;
   --bs-primary-text-emphasis: #0c1523;
   --bs-secondary-text-emphasis: #141a22;
@@ -2014,13 +2014,13 @@ progress {
 
 .table-light {
   --bs-table-color: #000;
-  --bs-table-bg: #fffdef;
-  --bs-table-border-color: #e6e4d7;
-  --bs-table-striped-bg: #f2f0e3;
+  --bs-table-bg: #ededed;
+  --bs-table-border-color: #d5d5d5;
+  --bs-table-striped-bg: #e1e1e1;
   --bs-table-striped-color: #000;
-  --bs-table-active-bg: #e6e4d7;
+  --bs-table-active-bg: #d5d5d5;
   --bs-table-active-color: #000;
-  --bs-table-hover-bg: #eceadd;
+  --bs-table-hover-bg: #dbdbdb;
   --bs-table-hover-color: #000;
   color: var(--bs-table-color);
   border-color: var(--bs-table-border-color);
@@ -3064,19 +3064,19 @@ textarea.form-control-lg {
 
 .btn-light {
   --bs-btn-color: #000;
-  --bs-btn-bg: #fffdef;
-  --bs-btn-border-color: #fffdef;
+  --bs-btn-bg: #ededed;
+  --bs-btn-border-color: #ededed;
   --bs-btn-hover-color: #000;
-  --bs-btn-hover-bg: #d9d7cb;
-  --bs-btn-hover-border-color: #cccabf;
-  --bs-btn-focus-shadow-rgb: 217, 215, 203;
+  --bs-btn-hover-bg: #c9c9c9;
+  --bs-btn-hover-border-color: #bebebe;
+  --bs-btn-focus-shadow-rgb: 201, 201, 201;
   --bs-btn-active-color: #000;
-  --bs-btn-active-bg: #cccabf;
-  --bs-btn-active-border-color: #bfbeb3;
+  --bs-btn-active-bg: #bebebe;
+  --bs-btn-active-border-color: #b2b2b2;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
   --bs-btn-disabled-color: #000;
-  --bs-btn-disabled-bg: #fffdef;
-  --bs-btn-disabled-border-color: #fffdef;
+  --bs-btn-disabled-bg: #ededed;
+  --bs-btn-disabled-border-color: #ededed;
 }
 
 .btn-dark {
@@ -3199,19 +3199,19 @@ textarea.form-control-lg {
 }
 
 .btn-outline-light {
-  --bs-btn-color: #fffdef;
-  --bs-btn-border-color: #fffdef;
+  --bs-btn-color: #ededed;
+  --bs-btn-border-color: #ededed;
   --bs-btn-hover-color: #000;
-  --bs-btn-hover-bg: #fffdef;
-  --bs-btn-hover-border-color: #fffdef;
-  --bs-btn-focus-shadow-rgb: 255, 253, 239;
+  --bs-btn-hover-bg: #ededed;
+  --bs-btn-hover-border-color: #ededed;
+  --bs-btn-focus-shadow-rgb: 237, 237, 237;
   --bs-btn-active-color: #000;
-  --bs-btn-active-bg: #fffdef;
-  --bs-btn-active-border-color: #fffdef;
+  --bs-btn-active-bg: #ededed;
+  --bs-btn-active-border-color: #ededed;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-  --bs-btn-disabled-color: #fffdef;
+  --bs-btn-disabled-color: #ededed;
   --bs-btn-disabled-bg: transparent;
-  --bs-btn-disabled-border-color: #fffdef;
+  --bs-btn-disabled-border-color: #ededed;
   --bs-gradient: none;
 }
 
@@ -6796,7 +6796,7 @@ textarea.form-control-lg {
 
 .text-bg-light {
   color: #000 !important;
-  background-color: RGBA(255, 253, 239, var(--bs-bg-opacity, 1)) !important;
+  background-color: RGBA(237, 237, 237, var(--bs-bg-opacity, 1)) !important;
 }
 
 .text-bg-dark {
@@ -6863,8 +6863,8 @@ textarea.form-control-lg {
   text-decoration-color: RGBA(var(--bs-light-rgb), var(--bs-link-underline-opacity, 1)) !important;
 }
 .link-light:hover, .link-light:focus {
-  color: RGBA(255, 253, 242, var(--bs-link-opacity, 1)) !important;
-  text-decoration-color: RGBA(255, 253, 242, var(--bs-link-underline-opacity, 1)) !important;
+  color: RGBA(241, 241, 241, var(--bs-link-opacity, 1)) !important;
+  text-decoration-color: RGBA(241, 241, 241, var(--bs-link-underline-opacity, 1)) !important;
 }
 
 .link-dark {
@@ -11867,23 +11867,9 @@ textarea.form-control-lg {
 }
 
 .body-bg {
-  position: relative;
   min-height: 100vh;
   width: 100%;
-}
-
-.body-bg::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: url("/src/assets/Images/bg.jpg");
-  background-size: cover;
-  background-position: center;
-  filter: blur(3px);
-  z-index: -1;
+  background: linear-gradient(to bottom, rgb(99, 25, 100) 0%, rgb(4, 4, 86) 100%);
 }
 
 #main-body {
