--- a/src/scss/sections/_main.scss
+++ b/src/scss/sections/_main.scss
@@ -5,24 +5,17 @@
 }
 
 .body-bg {
-  position: relative;
+
   min-height: 100vh;
   width: 100%;
+  background: linear-gradient(
+    to bottom,
+    rgb(99, 25, 100) 0%,
+    rgb(4, 4, 86) 100%
+  );
 }
 
-.body-bg::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: url("/src/assets/Images/bg.jpg");
-  background-size: cover;
-  background-position: center;
-  filter: blur(3px);
-  z-index: -1;
-}
+
 
 #main-body {
   min-height: 100vh !important;
