--- a/src/scss/sections/_form.scss
+++ b/src/scss/sections/_form.scss
@@ -1,14 +1,19 @@
 @use "../custom";
 
 .form-size {
-  max-width: 600px;
-  margin: 0 1.5rem;
+  max-width: 768px;
+  margin: auto;
   padding: 15px;
 }
 
 #form-body {
   min-height: 100% !important;
   padding-bottom: 70px;
-  max-width: 600px;
+
+  margin: auto;
+}
+
+.width-768 {
+  max-width: 768px;
   margin: auto;
 }
