added new section for income, initial release

--- a/src/assets/scss/styles.css
+++ b/src/assets/scss/styles.css
@@ -11896,6 +11896,11 @@ textarea.form-control-lg {
   padding: 15px;
 }
 
+.card-size {
+  max-width: 768px;
+  margin: auto;
+}
+
 #form-body {
   min-height: 100% !important;
   padding-bottom: 70px;
@@ -11972,12 +11977,12 @@ textarea.form-control-lg {
 }
 #my-footer {
   width: 100%;
-  height: 72px;
+  height: 40px;
   background: var(--bs-light);
   /* Use Bootstrap's light theme color */
   position: fixed;
   bottom: 0;
-  padding: 5px 0;
+  padding: 0;
   /* Increased padding for better spacing */
   display: flex;
   justify-content: center;
@@ -12011,7 +12016,7 @@ textarea.form-control-lg {
   /* Remove underline */
   font-weight: 500;
   /* Slightly bold for emphasis */
-  margin-top: 5px;
+  margin-top: 0;
   /* Add spacing between text and link */
 }
 
