--- a/src/scss/sections/_form.scss
+++ b/src/scss/sections/_form.scss
@@ -6,6 +6,11 @@
   padding: 15px;
 }
 
+.card-size {
+  max-width: 768px;
+  margin: auto;
+}
+
 #form-body {
   min-height: 100% !important;
   padding-bottom: 70px;
