--- a/src/scss/sections/_footer.scss
+++ b/src/scss/sections/_footer.scss
@@ -14,12 +14,12 @@
 
 #my-footer {
   width: 100%;
-  height: 72px;
+  height: 40px;
   background: var(--bs-light);
   /* Use Bootstrap's light theme color */
   position: fixed;
   bottom: 0;
-  padding: 5px 0;
+  padding: 0;
   /* Increased padding for better spacing */
   display: flex;
   justify-content: center;
@@ -53,7 +53,7 @@
   /* Remove underline */
   font-weight: 500;
   /* Slightly bold for emphasis */
-  margin-top: 5px;
+  margin-top: 0;
   /* Add spacing between text and link */
 }
 
